--- a/src/css/mixins/scrollbar.css
+++ b/src/css/mixins/scrollbar.css
@@ -1,22 +1,12 @@
 @mixin scrollbar {
   &::-webkit-scrollbar {
-    width: $width;
-    height: $width;
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: $color;
-    border-radius: $radius;
+    width: 10px;
+    height: 10px;
   }
   &::-webkit-scrollbar-track {
-    background-color: transparent;
+    background-color: #f00;
   }
-  &::-webkit-scrollbar-button {
-    display: none;
-  }
-  &::-webkit-scrollbar-corner {
-    display: none;
-  }
-  &::-webkit-resizer {
-    display: none;
+  &::-webkit-scrollbar-thumb {
+    background-color: #0f0;
   }
 }
