--- a/src/css/mixins/destyle.css
+++ b/src/css/mixins/destyle.css
@@ -1,5 +1,5 @@
 /**
- * @name          destyle
+ * @name          s-destyle
  * @namespace     css.mixins
  * @type          Mixin 
  * @platform      css
@@ -10,18 +10,13 @@
  * @return        {Css}                The generated css
  * 
  * @example         css
- * \@apply destyle;
+ * \@include s-destyle;
  *
  * @see         https://nicolas-cusan.github.io/destyle.css/
  * @since       0.0.1
  * @author      Olivier Bossel <olivier.bossel@gmail.com> (https://hello@lotsof.dev)
  */
-@mixin destyle {
-  /*! destyle.css v4.0.1 | MIT License | https://github.com/nicolas-cusan/destyle.css */
-
-  /* Reset box-model and set borders */
-  /* ============================================ */
-
+@mixin s-destyle {
   *,
   ::before,
   ::after {
@@ -30,44 +25,17 @@
     border-width: 0;
     min-width: 0;
   }
-
-  /* Document */
-  /* ============================================ */
-
-  /**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- * 3. Remove gray overlay on links for iOS.
- */
-
   html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
     -webkit-tap-highlight-color: transparent; /* 3*/
   }
-
-  /* Sections */
-  /* ============================================ */
-
-  /**
- * Remove the margin in all browsers.
- */
-
   body {
     margin: 0;
   }
-
-  /**
- * Render the `main` element consistently in IE.
- */
-
   main {
     display: block;
   }
-
-  /* Vertical rhythm */
-  /* ============================================ */
-
   p,
   table,
   blockquote,
@@ -79,10 +47,6 @@
   dl {
     margin: 0;
   }
-
-  /* Headings */
-  /* ============================================ */
-
   h1,
   h2,
   h3,
@@ -93,20 +57,12 @@
     font-weight: inherit;
     margin: 0;
   }
-
-  /* Lists (enumeration) */
-  /* ============================================ */
-
   ul,
   ol {
     margin: 0;
     padding: 0;
     list-style: none;
   }
-
-  /* Lists (definition) */
-  /* ============================================ */
-
   dt {
     font-weight: bold;
   }
@@ -114,15 +70,6 @@
   dd {
     margin-left: 0;
   }
-
-  /* Grouping content */
-  /* ============================================ */
-
-  /**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
   hr {
     box-sizing: content-box; /* 1 */
     height: 0; /* 1 */
@@ -132,76 +79,34 @@
     clear: both;
     color: inherit;
   }
-
-  /**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
   pre {
     font-family: monospace, monospace; /* 1 */
     font-size: inherit; /* 2 */
   }
-
   address {
     font-style: inherit;
   }
-
-  /* Text-level semantics */
-  /* ============================================ */
-
-  /**
- * Remove the gray background on active links in IE 10.
- */
-
   a {
     background-color: transparent;
     text-decoration: none;
     color: inherit;
   }
-
-  /**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
   abbr[title] {
     text-decoration: underline dotted; /* 2 */
   }
-
-  /**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
   b,
   strong {
     font-weight: bolder;
   }
-
-  /**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
   code,
   kbd,
   samp {
     font-family: monospace, monospace; /* 1 */
     font-size: inherit; /* 2 */
   }
-
-  /**
- * Add the correct font size in all browsers.
- */
-
   small {
     font-size: 80%;
   }
-
-  /**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
 
   sub,
   sup {
@@ -218,14 +123,6 @@
   sup {
     top: -0.5em;
   }
-
-  /* Replaced content */
-  /* ============================================ */
-
-  /**
- * Prevent vertical alignment issues.
- */
-
   svg,
   img,
   embed,
@@ -233,16 +130,6 @@
   iframe {
     vertical-align: bottom;
   }
-
-  /* Forms */
-  /* ============================================ */
-
-  /**
- * Reset form fields to make them styleable.
- * 1. Make form elements stylable across systems iOS especially.
- * 2. Inherit text-transform from parent.
- */
-
   button,
   input,
   optgroup,
@@ -260,11 +147,6 @@
     text-align: inherit;
     text-transform: inherit; /* 2 */
   }
-
-  /**
- * Correct cursors for clickable elements.
- */
-
   button,
   [type='button'],
   [type='reset'],
@@ -278,11 +160,6 @@
   [type='submit']:disabled {
     cursor: default;
   }
-
-  /**
- * Improve outlines for Firefox and unify style with input elements & buttons.
- */
-
   :-moz-focusring {
     outline: auto;
   }
@@ -290,129 +167,52 @@
   select:disabled {
     opacity: inherit;
   }
-
-  /**
- * Remove padding
- */
-
   option {
     padding: 0;
   }
-
-  /**
- * Reset to invisible
- */
-
   fieldset {
     margin: 0;
     padding: 0;
     min-width: 0;
   }
-
   legend {
     padding: 0;
   }
-
-  /**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
   progress {
     vertical-align: baseline;
   }
-
-  /**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
   textarea {
     overflow: auto;
   }
-
-  /**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
   [type='number']::-webkit-inner-spin-button,
   [type='number']::-webkit-outer-spin-button {
     height: auto;
   }
-
-  /**
- * Correct the outline style in Safari.
- */
-
   [type='search'] {
     outline-offset: -2px; /* 1 */
   }
-
-  /**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
   [type='search']::-webkit-search-decoration {
     -webkit-appearance: none;
   }
-
-  /**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Fix font inheritance.
- */
-
   ::-webkit-file-upload-button {
     -webkit-appearance: button; /* 1 */
     font: inherit; /* 2 */
   }
-
-  /**
- * Fix appearance for Firefox
- */
   [type='number'] {
     -moz-appearance: textfield;
   }
-
-  /**
- * Clickable labels
- */
-
   label[for] {
     cursor: pointer;
   }
-
-  /* Interactive */
-  /* ============================================ */
-
-  /*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
   details {
     display: block;
   }
-
-  /*
- * Add the correct display in all browsers.
- */
-
   summary {
     display: list-item;
   }
-
-  /*
- * Remove outline for editable content.
- */
-
   [contenteditable]:focus {
     outline: auto;
   }
-
-  /* Tables */
-  /* ============================================ */
-
-  /**
-1. Correct table border color inheritance in all Chrome and Safari.
-*/
-
   table {
     border-color: inherit; /* 1 */
     border-collapse: collapse;
